sylvia/tests/ui/attributes/data/invalid_usage.stderr
error: Wrong usage of `#[sv::data]` attribute.

         = note: The `#[sv::data]` attribute can only be used on the first parameter after the `ReplyCtx`.

  --> tests/ui/attributes/data/invalid_usage.rs:27:35
   |
27 |             #[sv::data(opt, raw)] _data: Option<Binary>,
   |                                   ^^^^^

error: Redundant payload parameter.

         = note: Expected no parameters after the parameter marked with `#[sv::payload(raw)]`.

  --> tests/ui/attributes/data/invalid_usage.rs:27:35
   |
27 |             #[sv::data(opt, raw)] _data: Option<Binary>,
   |                                   ^^^^^

error: Wrong usage of `#[sv::data]` attribute.

         = note: The `#[sv::data]` attribute can only be used in `success` scenario.
         = note: Found usage in `error` scenario.

  --> tests/ui/attributes/data/invalid_usage.rs:55:35
   |
55 |             #[sv::data(opt, raw)] _data: Option<Binary>,
   |                                   ^^^^^
